@@ -2,7 +2,7 @@ p {
   font-family: "sans-serif";
   color: #0080FF;
   font-weight: bolder;
-  font-size: 36px;
+  font-size: 24px;
   text-align: center;
 }
 h3 {
