@@ -267,7 +267,7 @@ DocumentRoot "/home/ftp/root"
     IndexIgnore /.web
     HeaderName /.web/header.html
     ReadmeName /.web/footer.html
-    IndexOrderDefault Ascending Date
+    IndexOrderDefault Ascending Name
     ServerSignature Off
 
     #
