@@ -1,0 +1,5 @@
+# /etc/sysctl.d/60-ipv4_bbr.conf
+
+# Trun on BBR congestion control algorithm for TCP with Linux >= 4.9.0
+net.ipv4.tcp_congestion_control = bbr
+
